# sec-agent

./: .env.example  .gitignore  README.md  TokenContract.sol  ai_audit_test_results.json  backup_fix_scan_executor.py  complex_vulnerable.sol  demo.py  env.example  fix_executor_return.py  fix_scan_executor.py  fix_script.py  install_security_tools.sh  install_slither.sh  main.py  manticore  myth  pyproject.toml  requirements-ai.txt  requirements-manticore.txt  requirements-mythril.txt  requirements-slither.txt  requirements-web3.txt  requirements.txt  results.json  sample_complex.sol  sample_contract.sol  scan_results.json  settings.cursorrules  setup_env.sh  test1.sol  test2.sol  test3.sol  test_ai_audit.py  test_ai_audit_api.py  test_contract.sol  test_github_scan.py  test_scan.py
backend/: server_debug.txt  server_log.txt  test_batch_client.py  test_chunking.py  test_imports_only.py
backend/api/: __init__.py  server.py
backend/config/: settings.py
backend/core/: _read_file_content  ai_audit_analyzer.py  audit_report_manager.py  chunked_ai_audit_analyzer.py  chunking_manager.py  cve_knowledge_base.py  input_handler.py  knowledge_base.py  langchain_batch_wrapper.py  openai_batch_client.py  orchestrator.py  result_aggregator.py  result_summarizer.py  scan_executor.py  scan_executor_fixed.py  scan_executor_new.py  security_agent.py  tool_selector.py
backend/scripts/: create_reports_index.py  extract_findings_from_pdfs.py
backend/utils/: cve_loader.py  helpers.py
cached_files/: MyEpicNFT.sol  MyEpicNFTList.sol  WavePortal.sol
examples/: SimpleToken.sol
frontend/: package-lock.json
frontend/src/: App.css  App.js
scripts/: uv-commands.sh
security_agent/data/sources/cve_cache/: search_blockchain.json  search_smart_contract.json  search_web_vulnerability.json
test_contracts/: Contract1.sol
test_contracts/subfolder/: Contract2.sol
