[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-agent"
version = "0.1.0"
description = "Security Agent for Smart Contract Analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies that are always installed
dependencies = [
    # Core web framework
    "flask==2.2.3",
    "flask-cors==3.0.10",
    "requests>=2.31.0",
    "urllib3<2",
    "python-dotenv==1.0.0",
    "rich>=13.5.0",
    "environs>=9.5.0",
    "typing-extensions>=4.5.0",
    "packaging>=23.2",
    "markupsafe>=2.1.1",
    "werkzeug<3.0.0",
    
    # Document processing
    "PyPDF2>=3.0.0",
    "validators>=0.22.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    
    # Web scraping
    "selenium>=4.14.0",
    "webdriver-manager>=4.0.1",
    
    # GitHub integration
    "pygithub==1.58.2",
    
    # AI/LLM core
    "tiktoken>=0.5.0",
    "pydantic>=1.10.8",
]

[project.optional-dependencies]
# AI/LLM dependencies
ai = [
    "openai>=1.3.0",
    "langchain>=0.0.267",
    "langchain-community>=0.0.7",
    "langchain-openai>=0.0.2",
    "langchain-core>=0.1.4",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.6",
]

# Security analysis tools (Slither compatible)
security = [
    "slither-analyzer>=0.9.5",
    "solc-select>=1.0.3",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# Complete installation with AI and security tools
full = [
    "sec-agent[ai,security,dev]",
]

[project.scripts]
sec-agent = "backend.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/sec-agent"
Issues = "https://github.com/yourusername/sec-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
